--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nsite void</title>
+    <title>the void</title>
 
     <!-- Load the chat interface -->
     <script type="module" src="/void.js"></script>
@@ -119,17 +119,31 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 120px;
-        height: 120px;
+        width: 70px;
+        height: 70px;
+        background: #000000;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 10;
+      }
+
+      .photon-ring {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 90px;
+        height: 90px;
         background: radial-gradient(
           circle,
-          transparent 30%,
-          rgba(0, 0, 0, 0.9) 50%,
-          black 70%
+          rgba(255, 255, 255, 0.9) 0%,
+          rgba(255, 220, 150, 0.8) 20%,
+          rgba(255, 180, 100, 0.6) 40%,
+          transparent 60%
         );
         border-radius: 50%;
         transform: translate(-50%, -50%);
-        animation: blackholeRotate 20s linear infinite;
+        z-index: 9;
+        animation: photonRing 15s linear infinite;
       }
 
       .accretion-disk {
@@ -138,48 +152,102 @@
         left: 50%;
         width: 200px;
         height: 200px;
-        background: conic-gradient(
-          from 0deg,
-          transparent,
-          rgba(255, 140, 0, 0.3),
-          rgba(255, 69, 0, 0.4),
-          rgba(255, 140, 0, 0.3),
-          transparent,
-          rgba(255, 140, 0, 0.2),
-          rgba(255, 69, 0, 0.3),
-          rgba(255, 140, 0, 0.2),
-          transparent
-        );
+        background:
+          radial-gradient(
+            ellipse 80% 40% at 60% 50%,
+            rgba(255, 255, 255, 0.4) 0%,
+            rgba(255, 200, 100, 0.6) 15%,
+            rgba(255, 140, 60, 0.5) 25%,
+            rgba(200, 100, 255, 0.4) 40%,
+            rgba(138, 43, 226, 0.3) 60%,
+            rgba(75, 0, 130, 0.2) 80%,
+            transparent 90%
+          ),
+          radial-gradient(
+            ellipse 40% 80% at 40% 50%,
+            transparent 0%,
+            rgba(255, 180, 120, 0.3) 20%,
+            rgba(180, 80, 255, 0.4) 40%,
+            rgba(138, 43, 226, 0.3) 60%,
+            transparent 80%
+          );
         border-radius: 50%;
         transform: translate(-50%, -50%);
-        animation: blackholeRotate 8s linear infinite;
-        opacity: 0.7;
+        animation: accretionDisk 12s linear infinite;
+        z-index: 8;
       }
 
-      .singularity {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 40px;
-        height: 40px;
-        background: black;
-        border-radius: 50%;
-        transform: translate(-50%, -50%);
-        box-shadow:
-          0 0 20px rgba(0, 0, 0, 0.8),
-          inset 0 0 20px rgba(0, 0, 0, 1);
-      }
-
-      .lensing-ring {
+      .gravitational-lensing {
         position: absolute;
         top: 50%;
         left: 50%;
         width: 160px;
         height: 160px;
-        border: 2px solid rgba(255, 255, 255, 0.1);
         border-radius: 50%;
         transform: translate(-50%, -50%);
-        animation: pulse 3s ease-in-out infinite;
+        background: conic-gradient(
+          from 0deg,
+          transparent 0%,
+          rgba(255, 255, 255, 0.1) 15%,
+          transparent 30%,
+          rgba(255, 200, 150, 0.15) 45%,
+          transparent 60%,
+          rgba(200, 150, 255, 0.1) 75%,
+          transparent 90%,
+          rgba(255, 255, 255, 0.05) 100%
+        );
+        animation: gravitationalLensing 25s linear infinite;
+        z-index: 7;
+      }
+
+      .outer-glow {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 240px;
+        height: 240px;
+        background: radial-gradient(
+          circle,
+          transparent 0%,
+          rgba(255, 255, 255, 0.02) 20%,
+          rgba(200, 150, 255, 0.05) 40%,
+          rgba(138, 43, 226, 0.03) 60%,
+          transparent 80%
+        );
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        animation: outerGlow 30s ease-in-out infinite alternate;
+        z-index: 6;
+      }
+
+      /* Particles being pulled into black hole */
+      .particle {
+        position: absolute;
+        width: 2px;
+        height: 2px;
+        background: rgba(255, 255, 255, 0.8);
+        border-radius: 50%;
+        pointer-events: none;
+      }
+
+      .particle.purple {
+        background: rgba(138, 43, 226, 0.9);
+        box-shadow: 0 0 6px rgba(138, 43, 226, 0.7);
+      }
+
+      .particle.violet {
+        background: rgba(148, 0, 211, 0.9);
+        box-shadow: 0 0 6px rgba(148, 0, 211, 0.7);
+      }
+
+      .particle.indigo {
+        background: rgba(75, 0, 130, 0.9);
+        box-shadow: 0 0 6px rgba(75, 0, 130, 0.7);
+      }
+
+      .particle.magenta {
+        background: rgba(199, 21, 133, 0.9);
+        box-shadow: 0 0 6px rgba(199, 21, 133, 0.7);
       }
 
       /* Hover text */
@@ -219,102 +287,59 @@
         letter-spacing: 0.1em;
       }
 
-      /* Starry background animations */
-      .stars {
+      /* Improved starry background */
+      .star {
+        position: absolute;
+        background: white;
+        border-radius: 50%;
+        animation: twinkle 3s ease-in-out infinite alternate;
+      }
+
+      .star.small {
         width: 1px;
         height: 1px;
-        background: transparent;
-        box-shadow:
-          50px 50px #fff,
-          100px 100px #fff,
-          150px 150px #fff,
-          200px 200px #fff,
-          250px 250px #fff,
-          300px 300px #fff,
-          350px 350px #fff,
-          400px 400px #fff,
-          450px 450px #fff,
-          500px 500px #fff,
-          550px 550px #fff,
-          600px 600px #fff,
-          650px 650px #fff,
-          700px 700px #fff,
-          750px 750px #fff,
-          800px 800px #fff,
-          850px 850px #fff,
-          900px 900px #fff,
-          950px 950px #fff,
-          1000px 1000px #fff,
-          1050px 1050px #fff,
-          1100px 1100px #fff,
-          1150px 1150px #fff,
-          1200px 1200px #fff,
-          1250px 1250px #fff,
-          1300px 1300px #fff,
-          1350px 1350px #fff,
-          1400px 1400px #fff,
-          1450px 1450px #fff,
-          1500px 1500px #fff,
-          1550px 1550px #fff,
-          1600px 1600px #fff,
-          1650px 1650px #fff,
-          1700px 1700px #fff,
-          1750px 1750px #fff,
-          1800px 1800px #fff;
-        animation: animStar 50s linear infinite;
+        opacity: 0.7;
       }
 
-      .stars2 {
+      .star.medium {
         width: 2px;
         height: 2px;
-        background: transparent;
-        box-shadow:
-          700px 100px #fff,
-          300px 300px #fff,
-          100px 500px #fff,
-          800px 700px #fff,
-          200px 900px #fff,
-          900px 200px #fff,
-          600px 600px #fff,
-          1000px 400px #fff,
-          400px 800px #fff,
-          1200px 600px #fff,
-          500px 1000px #fff,
-          1400px 300px #fff,
-          1100px 900px #fff,
-          300px 1200px #fff,
-          1500px 500px #fff,
-          800px 1100px #fff;
-        animation: animStar 100s linear infinite;
+        opacity: 0.8;
+        box-shadow: 0 0 6px rgba(255, 255, 255, 0.3);
       }
 
-      .stars3 {
+      .star.large {
         width: 3px;
         height: 3px;
-        background: transparent;
-        box-shadow:
-          600px 200px #fff,
-          200px 600px #fff,
-          1000px 300px #fff,
-          400px 1000px #fff,
-          1300px 700px #fff,
-          700px 1300px #fff,
-          900px 400px #fff,
-          1500px 800px #fff;
-        animation: animStar 150s linear infinite;
+        opacity: 0.9;
+        box-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
       }
 
       /* Animations */
-      @keyframes animStar {
-        from {
-          transform: translateY(0px);
+      @keyframes twinkle {
+        0% {
+          opacity: 0.3;
         }
-        to {
-          transform: translateY(-2000px);
+        100% {
+          opacity: 1;
         }
       }
 
-      @keyframes blackholeRotate {
+      @keyframes photonRing {
+        0% {
+          transform: translate(-50%, -50%) rotate(0deg);
+          opacity: 0.9;
+        }
+        50% {
+          opacity: 1;
+        }
+        100% {
+          transform: translate(-50%, -50%) rotate(360deg);
+          opacity: 0.9;
+        }
+      }
+
+      @keyframes accretionDisk {
         from {
           transform: translate(-50%, -50%) rotate(0deg);
         }
@@ -323,15 +348,23 @@
         }
       }
 
-      @keyframes pulse {
-        0%,
-        100% {
-          opacity: 0.1;
+      @keyframes gravitationalLensing {
+        from {
+          transform: translate(-50%, -50%) rotate(0deg);
+        }
+        to {
+          transform: translate(-50%, -50%) rotate(-360deg);
+        }
+      }
+
+      @keyframes outerGlow {
+        0% {
+          opacity: 0.3;
           transform: translate(-50%, -50%) scale(1);
         }
-        50% {
-          opacity: 0.3;
-          transform: translate(-50%, -50%) scale(1.05);
+        100% {
+          opacity: 0.5;
+          transform: translate(-50%, -50%) scale(1.1);
         }
       }
 
@@ -339,6 +372,17 @@
         to {
           opacity: 1;
           transform: translateY(0);
+        }
+      }
+
+      @keyframes spiralIn {
+        0% {
+          transform: rotate(0deg) translateX(150px) rotate(0deg);
+          opacity: 1;
+        }
+        100% {
+          transform: rotate(720deg) translateX(20px) rotate(-720deg);
+          opacity: 0;
         }
       }
 
@@ -358,17 +402,15 @@
   </head>
   <body>
     <!-- Animated stars background -->
-    <div class="stars-background">
-      <div class="stars"></div>
-      <div class="stars2"></div>
-      <div class="stars3"></div>
+    <div class="stars-background" id="stars-background">
+      <!-- Stars will be dynamically generated here -->
     </div>
 
     <!-- Main content -->
     <div class="main-content">
       <!-- Title -->
       <h1 class="main-title">
-        <span class="title-nsite">NSITE</span>
+        <span class="title-nsite">THE</span>
         <span class="title-void">VOID</span>
       </h1>
 
@@ -379,15 +421,17 @@
       </p>
 
       <!-- Black hole button -->
-      <div class="blackhole-container" onclick="openVoid()">
-        <!-- Event horizon -->
-        <div class="event-horizon"></div>
+      <div class="blackhole-container" onclick="openVoid()" id="blackhole">
+        <!-- Outer glow effect -->
+        <div class="outer-glow"></div>
+        <!-- Gravitational lensing effects -->
+        <div class="gravitational-lensing"></div>
         <!-- Accretion disk -->
         <div class="accretion-disk"></div>
-        <!-- Center singularity -->
-        <div class="singularity"></div>
-        <!-- Gravitational lensing effect -->
-        <div class="lensing-ring"></div>
+        <!-- Bright photon ring -->
+        <div class="photon-ring"></div>
+        <!-- Event horizon (black center) -->
+        <div class="event-horizon"></div>
 
         <!-- Hover text -->
         <div class="hover-text">
@@ -408,6 +452,92 @@
           .shadowRoot.querySelector("button")
           .click();
       }
+
+      // Create responsive star field
+      function createStars() {
+        const starsContainer = document.getElementById("stars-background");
+        const starCount = Math.min(
+          150,
+          Math.floor((window.innerWidth * window.innerHeight) / 10000),
+        );
+
+        for (let i = 0; i < starCount; i++) {
+          const star = document.createElement("div");
+          star.className = "star";
+
+          // Randomly assign size classes
+          const sizeClass =
+            Math.random() < 0.6
+              ? "small"
+              : Math.random() < 0.8
+                ? "medium"
+                : "large";
+          star.classList.add(sizeClass);
+
+          // Random position
+          star.style.left = Math.random() * 100 + "%";
+          star.style.top = Math.random() * 100 + "%";
+
+          // Random animation delay for twinkling
+          star.style.animationDelay = Math.random() * 3 + "s";
+
+          starsContainer.appendChild(star);
+        }
+      }
+
+      // Create particles that spiral into the black hole
+      function createParticle() {
+        const blackhole = document.getElementById("blackhole");
+        const particle = document.createElement("div");
+        particle.className = "particle";
+
+        // Random particle colors
+        const colors = ["", "purple", "violet", "indigo", "magenta"];
+        const colorClass = colors[Math.floor(Math.random() * colors.length)];
+        if (colorClass) particle.classList.add(colorClass);
+
+        // Random starting position around the black hole
+        const angle = Math.random() * Math.PI * 2;
+        const distance = 120 + Math.random() * 80;
+        const x = Math.cos(angle) * distance;
+        const y = Math.sin(angle) * distance;
+
+        particle.style.left = "50%";
+        particle.style.top = "50%";
+        particle.style.transform = `translate(-50%, -50%) translate(${x}px, ${y}px)`;
+
+        // Add spiral animation
+        particle.style.animation = `spiralIn ${2 + Math.random() * 3}s ease-in forwards`;
+
+        blackhole.appendChild(particle);
+
+        // Remove particle after animation
+        setTimeout(() => {
+          if (particle.parentNode) {
+            particle.parentNode.removeChild(particle);
+          }
+        }, 5000);
+      }
+
+      // Initialize stars on load
+      window.addEventListener("load", () => {
+        createStars();
+
+        // Start particle generation with more frequency
+        setInterval(createParticle, 150 + Math.random() * 300);
+
+        // Add second particle generator for denser effect
+        setTimeout(() => {
+          setInterval(createParticle, 200 + Math.random() * 400);
+        }, 100);
+      });
+
+      // Recreate stars on resize
+      window.addEventListener("resize", () => {
+        const starsContainer = document.getElementById("stars-background");
+        starsContainer.innerHTML = "";
+        createStars();
+      });
     </script>
   </body>
 </html>
